graveyard/processedheaders-methods.h

typedef long int int64_t;
typedef unsigned long int uint64_t;
typedef unsigned int GLenum;
typedef unsigned int GLbitfield;
typedef unsigned int GLuint;
typedef int GLint;
typedef int GLsizei;
typedef unsigned char GLboolean;
typedef signed char GLbyte;
typedef short GLshort;
typedef unsigned char GLubyte;
typedef unsigned short GLushort;
typedef unsigned long GLulong;
typedef float GLfloat;
typedef float GLclampf;
typedef double GLdouble;
typedef double GLclampd;
typedef void GLvoid;
typedef int64_t GLint64EXT;
typedef uint64_t GLuint64EXT;
typedef GLint64EXT GLint64;
typedef GLuint64EXT GLuint64;
typedef char GLchar;
extern void glClear (GLbitfield mask);
extern void glClearColor (GLclampf red, GLclampf green, GLclampf blue, GLclampf alpha);
extern GLenum glGetError (void);
extern void glViewport (GLint x, GLint y, GLsizei width, GLsizei height);
 int glutCreateMenu( void (* callback)( int menu ) );
 void glutTimerFunc( unsigned int time, void (* callback)( int ), int value );
 void glutIdleFunc( void (* callback)( void ) );
 void glutKeyboardFunc( void (* callback)( unsigned char, int, int ) );
 void glutSpecialFunc( void (* callback)( int, int, int ) );
 void glutReshapeFunc( void (* callback)( int, int ) );
 void glutVisibilityFunc( void (* callback)( int ) );
 void glutDisplayFunc( void (* callback)( void ) );
 void glutMouseFunc( void (* callback)( int, int, int, int ) );
 void glutMotionFunc( void (* callback)( int, int ) );
 void glutPassiveMotionFunc( void (* callback)( int, int ) );
 void glutEntryFunc( void (* callback)( int ) );
 void glutKeyboardUpFunc( void (* callback)( unsigned char, int, int ) );
 void glutSpecialUpFunc( void (* callback)( int, int, int ) );
 void glutJoystickFunc( void (* callback)( unsigned int, int, int, int ), int pollInterval );
 void glutMenuStateFunc( void (* callback)( int ) );
 void glutMenuStatusFunc( void (* callback)( int, int, int ) );
 void glutOverlayDisplayFunc( void (* callback)( void ) );
 void glutWindowStatusFunc( void (* callback)( int ) );
 void glutSpaceballMotionFunc( void (* callback)( int, int, int ) );
 void glutSpaceballRotateFunc( void (* callback)( int, int, int ) );
 void glutSpaceballButtonFunc( void (* callback)( int, int ) );
 void glutButtonBoxFunc( void (* callback)( int, int ) );
 void glutDialsFunc( void (* callback)( int, int ) );
 void glutTabletMotionFunc( void (* callback)( int, int ) );
 void glutTabletButtonFunc( void (* callback)( int, int, int, int ) );
typedef union
  {
    union wait *__uptr;
    int *__iptr;
  } __WAIT_STATUS __attribute__ ((__transparent_union__));
typedef unsigned long int ulong;
typedef unsigned short int ushort;
typedef unsigned int uint;
extern int atexit (void (*__func) (void)) __attribute__ ((__nothrow__ , __leaf__)) __attribute__ ((__nonnull__ (1)));
extern int on_exit (void (*__func) (int __status, void *__arg), void *__arg)
     __attribute__ ((__nothrow__ , __leaf__)) __attribute__ ((__nonnull__ (1)));
 void glutMouseWheelFunc( void (* callback)( int, int, int, int ) );
 void glutCloseFunc( void (* callback)( void ) );
 void glutWMCloseFunc( void (* callback)( void ) );
 void glutMenuDestroyFunc( void (* callback)( void ) );
 void glutMultiEntryFunc( void (* callback)( int, int ) );
 void glutMultiButtonFunc( void (* callback)( int, int, int, int, int ) );
 void glutMultiMotionFunc( void (* callback)( int, int, int ) );
 void glutMultiPassiveFunc( void (* callback)( int, int, int ) );
typedef __gnuc_va_list va_list;
 void glutInitErrorFunc( void (* vError)( const char *fmt, va_list ap ) );
 void glutInitWarningFunc( void (* vWarning)( const char *fmt, va_list ap ) );